--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -3,7 +3,7 @@ body {
   line-height: 20px;
   font-weight: normal;
   font-style: normal;
-  font-family: consolas, monaco, courier, "courier new", fixed-width;
+  font-family: Helvetica, fixed-width;
   color: #333333;
   padding: 20px;
   margin: 0;
@@ -142,7 +142,7 @@ time {
 }
 code,
 pre {
-  font-family: Consolas, Courier, monospace;
+  font-family: Helvetica;
 }
 code {
   color: #f14e32;
@@ -158,7 +158,7 @@ pre {
   line-height: 1.4;
   white-space: pre;
   overflow-x: auto;
-  background-color: #f9f9f9;
+  background-color: #ffffff;
   border: 1px solid #ddd;
   padding: 1rem;
   code {
