--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -3,7 +3,7 @@ body {
   line-height: 20px;
   font-weight: normal;
   font-style: normal;
-  font-family: Helvetica, fixed-width;
+  font-family: Georgia, serif, fixed-width;
   color: #333333;
   padding: 20px;
   margin: 0;
@@ -142,7 +142,7 @@ time {
 }
 code,
 pre {
-  font-family: Helvetica;
+  font-family: Georgia, serif;
 }
 code {
   color: #f14e32;
@@ -158,7 +158,7 @@ pre {
   line-height: 1.4;
   white-space: pre;
   overflow-x: auto;
-  background-color: #ffffff;
+  background-color: #000000;
   border: 1px solid #ddd;
   padding: 1rem;
   code {
@@ -190,6 +190,9 @@ iframe {
 article {
   max-width: 500px;
   margin: 0 auto;
+  text-align: justify;
+  text-justify: inter-word;
+  
   .title {
     line-height: 1.4em;
     text-align: center;
