--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -7,6 +7,15 @@ layout: default
 	<div class="center">
 		<h1>{{ page.title }}</h1>
 		<time>{{ page.date | date: '%B %-d, %Y' }}</time>
+        <p></p><br/>
+        <div class="tags">
+            {% assign sortedCategories = page.categories | sort %}
+            {% for category in sortedCategories %}
+                <span class="tag">
+                    <a href="/category/{{ category }}">#{{ category }}</a>
+                </span>
+            {% endfor %}
+        </div>
 	</div>
 
 	<div class="divider"></div>
