--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -5,6 +5,7 @@ body {
   font-style: normal;
   font-family: Georgia, serif, fixed-width;
   color: #333333;
+  background-color: #ffffff !important;
   padding: 20px;
   margin: 0;
   -webkit-font-smoothing: antialiased;
@@ -158,7 +159,7 @@ pre {
   line-height: 1.4;
   white-space: pre;
   overflow-x: auto;
-  background-color: #000000;
+  background-color: #ffffff;
   border: 1px solid #ddd;
   padding: 1rem;
   code {
@@ -192,7 +193,7 @@ article {
   margin: 0 auto;
   text-align: justify;
   text-justify: inter-word;
-  
+
   .title {
     line-height: 1.4em;
     text-align: center;
